--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,9 @@ stages:
   - cleanup   # delete existing ressources from openshift namespace
   - deploy    # push to openshift
 
+################################################################################
+# BUILD
+
 maven-build:
   stage: build
   image: openjdk:8-jdk-alpine
@@ -24,6 +27,8 @@ maven-build:
       - target/*
   script: "./mvnw $MAVEN_CLI_OPTS clean org.jacoco:jacoco-maven-plugin:prepare-agent verify"
 
+################################################################################
+# ANALYZE
 
 sonarqube:
   stage: analyze
