Step 01: Add Lombok dependency.

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Lombok dependency as provided for annotation processor -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.20</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
