Updated package structure, Lombok version and Docker base image.

--- a/pom.xml
+++ b/pom.xml
@@ -4,27 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.qaware.qacampus</groupId>
     <artifactId>lombok-service</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>war</packaging>
 
     <!-- Gitlab SCM info -->
     <scm>
-        <connection>scm:git:https://gitlab.qaware.de/qaware/qacampus/lombok-service.git</connection>
-        <url>https://gitlab.qaware.de/qaware/qacampus/lombok-service</url>
+        <connection>scm:git:https://github.com/lreimer/lombok-service.git</connection>
+        <url>https://github.com/lreimer/lombok-service</url>
         <tag>master</tag>
     </scm>
-
-    <!-- use QAcampus repositories for release and snapshots -->
-    <distributionManagement>
-        <repository>
-            <id>lombok-service-releases</id>
-            <url>https://artifactory.qaware.de/artifactory/qaware-qacampus-maven-release/</url>
-        </repository>
-        <snapshotRepository>
-            <id>lombok-service-snapshots</id>
-            <url>https://artifactory.qaware.de/artifactory/qaware-qacampus-maven-snapshot/</url>
-        </snapshotRepository>
-    </distributionManagement>
 
     <!-- build configuration properties -->
     <properties>
@@ -48,7 +36,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.20</version>
+            <version>1.18.6</version>
             <scope>provided</scope>
         </dependency>
 
